--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,10 @@ body {
   padding: 50px 50px 0 50px;
   margin: 0 auto;
 }
+
+.footer {
+  color: var(--poke-yellow) !important;
+  background-color: var(--poke-red) !important;
+  max-width: 100% !important;
+  letter-spacing: 0;
+}
