--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,11 @@ body {
 
 .about-me-bio {
   letter-spacing: 0;
+  border-style: solid;
+  border-width: 5px;
+  border-color: var(--poke-red);
+  border-radius: 16px;
+  padding: 20px;
 }
 
 .panos-image {
